# geometry

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
application/printing_hello_world/: CMakeLists.txt
application/printing_hello_world/src/: main.cpp
cmake/: create_documents.cmake
include/geometry/: distance.hpp  point2d.hpp
module/utils/: CMakeLists.txt
module/utils/application/: CMakeLists.txt
src/: distance.cpp  point2d.cpp
test/unit/: CMakeLists.txt  main.cpp  point2d.cpp
